--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,6 +19,9 @@
   <body id="page-admin">
 
     <div id="gamepad">
+      <div id="score">
+        0
+      </div>
       Tilt your phone to play!
     </div>
 
