--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,25 +4,15 @@ body {
 
 
 #page-player {
-  background:#0019CC;
-}
-
-#player {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-
-  width:100px;
-  height:100px;
-  background:#F7CE4C;
-  border-radius:50%;
+  padding:0;
+  margin:0;
 }
 
 /* ========== */
 
 #page-admin {
   background:#EC4E3A;
+  color:#0019CC;
 }
 
 #gamepad {
@@ -35,21 +25,6 @@ body {
   white-space:nowrap;
 }
 
-.button-direction {
-  width:100px;
-  height:100px;
-  
-  background:#0019CC;
-  color:#F7CE4C;
-  border-radius:50%;
-  font-size:50px;
-  border:none;
-  outline:none;
-  line-height:100px;
-  text-align:center;
-}
-
-.button-direction:active {
-  background:#F7CE4C;
-  color:#0019CC;
+#score {
+  font-size:50vw;
 }
